--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sjoerddewaard/aqua_note",
+    "name": "sjoerddewaard/mtg",
     "license": "proprietary",
     "type": "project",
     "autoload": {
