--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "oldsound/rabbitmq-bundle":"1.8.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
