start gemaakt met profile

--- a/src/MtgBundle/Resources/config/services.yml
+++ b/src/MtgBundle/Resources/config/services.yml
@@ -24,6 +24,11 @@ services:
         public: true
         arguments: [ "@doctrine.orm.entity_manager"]
 
+    mtg.user:
+        class: 'MtgBundle\Service\MtgUserService'
+        public: true
+        arguments: ["@doctrine.orm.entity_manager"]
+
     mtg.symbol_extension:
         class: MtgBundle\Twig\MtgSymbolExtension
         tags:
