--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -14,3 +14,9 @@ mtg:
     resource: "@MtgBundle/Controller/"
     type:     annotation
     prefix:   /
+
+fos_comment_api:
+    type:   rest
+    resource: '@FOSCommentBundle/Resources/config/routing.yml'
+    prefix: /api
+    defaults: { _format: html }
