--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,6 +79,18 @@ fos_user:
         address: 'sjoerddewaard@gmail.com'
         sender_name: 'Sjoerd'
 
+fos_comment:
+    db_driver: orm
+    class:
+        model:
+            comment: MtgBundle\Entity\Comment_Comment
+            thread: MtgBundle\Entity\Comment_Thread
+
+fos_message:
+    db_driver: orm
+    thread_class: MtgBundle\Entity\Pm_Thread
+    message_class: MtgBundle\Entity\Pm_Message
+
 cmen_google_charts:
     version: "current"
     language: "nl"
