--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -14,3 +14,12 @@ mtg:
     resource: "@MtgBundle/Controller/"
     type:     annotation
     prefix:   /
+
+fos_comment_api:
+    resource: "@FOSCommentBundle/Resources/config/routing.yml"
+    type: rest
+    prefix: /api
+    defaults: { _format: html }
+
+fos_message:
+    resource: "@FOSMessageBundle/Resources/config/routing.xml"
