--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/doctrine-migrations-bundle": "^1.3",
         "doctrine/orm": "^2.5",
+        "friendsofsymfony/comment-bundle": "^2.2",
+        "friendsofsymfony/message-bundle": "^1.3",
         "friendsofsymfony/user-bundle": "^2.0",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
