--- a/src/MtgBundle/Resources/config/services.yml
+++ b/src/MtgBundle/Resources/config/services.yml
@@ -1,33 +1,17 @@
 services:
-    mtg.card:
-        class: 'MtgBundle\Service\MtgCardService'
-        public: true
-        arguments: [ "@doctrine.orm.entity_manager" ]
+    _defaults:
+        public: false
+        autoconfigure: true
+        autowire: true
 
-    mtg.set:
-        class: 'MtgBundle\Service\MtgSetService'
-        public: true
-        arguments: [ "@doctrine.orm.entity_manager" ]
-
-    mtg.collection:
-        class: 'MtgBundle\Service\MtgCollectionService'
-        public: true
-        arguments: [ "@doctrine.orm.entity_manager", "@mtg.card"]
-
-    mtg.extrainfo:
-        class: 'MtgBundle\Service\MtgExtraLiveDataService'
-        public: true
+    MtgBundle\Service\:
+        resource: '../../Service/'
+        autowire: true
         arguments: [ "@doctrine.orm.entity_manager"]
 
-    mtg.deck:
-        class: 'MtgBundle\Service\MtgDeckService'
-        public: true
-        arguments: [ "@doctrine.orm.entity_manager"]
-
-    mtg.user:
-        class: 'MtgBundle\Service\MtgUserService'
-        public: true
-        arguments: ["@doctrine.orm.entity_manager"]
+    MtgBundle\Controller\:
+        resource: '../../Controller'
+        #tags: ['controller.service_arguments']
 
     mtg.symbol_extension:
         class: MtgBundle\Twig\MtgSymbolExtension
