autowired user controller

--- a/src/MtgBundle/Resources/config/services.yml
+++ b/src/MtgBundle/Resources/config/services.yml
@@ -18,3 +18,8 @@ services:
         tags:
             - { name: twig.extension }
         autowire: true
+    FOS\MessageBundle\Composer\Composer: '@fos_message.composer'
+
+    FOS\MessageBundle\Sender\Sender: '@fos_message.sender'
+
+    FOS\MessageBundle\Provider\Provider: '@fos_message.provider'
